# vpn-gate-client

./: .gitignore  README.md
.github/workflows/: build-and-push.yml  build-apk.yml
vpn-gate-backend/: .air.toml  .dockerignore  .env.example  .gitignore  Dockerfile.dev  Dockerfile.prod  README.md  docker-compose.dev.yml  docker-compose.prod.yml  go.mod  go.sum  pyproject.toml
vpn-gate-backend/app/: database.py  main.py  prober.py  scheduler.py  scraper.py  validator.py
vpn-gate-backend/cmd/server/: main.go
vpn-gate-backend/docs/: docs.go  swagger.json  swagger.yaml
vpn-gate-backend/internal/database/: database.go
vpn-gate-backend/internal/scraper/: scraper.go
vpn-gate-backend/internal/validator/: validator.go
vpn-gate-backend/internal/vpncheck/: vpncheck.go
vpn-gate-backend/scraper/: Dockerfile  scraper.py
vpngateclient/: build.gradle.kts  settings.gradle.kts
vpngateclient/app/: build.gradle.kts
vpngateclient/app/src/androidTest/java/com/example/vpn_gate_clent/: ExampleInstrumentedTest.kt
vpngateclient/app/src/main/: AndroidManifest.xml
vpngateclient/app/src/main/java/com/vpngate/client/: MainActivity.kt  ZenithVpnApplication.kt
vpngateclient/app/src/main/res/drawable/: flag_un.xml  ic_launcher_foreground.xml  ic_notification.xml
vpngateclient/app/src/main/res/values/: strings.xml  themes.xml
vpngateclient/app/src/test/java/com/example/vpn_gate_clent/: ExampleUnitTest.kt
vpngateclient/gradle/: libs.versions.toml
vpngateclient/gradle/wrapper/: gradle-wrapper.properties
(+17 files in other folders)
