[project]
name = "vpn-gate-backend"
version = "1.0.0"
description = "FastAPI backend for Zenith VPN Gate — egress probing & 2-tier stealth classification."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.139.2",
    "uvicorn[standard]>=0.49.0",
    "curl-cffi>=0.15.0",
    "requests>=2.34.2",
    "httpx>=0.28.1",
]

[build-system]
requires = ["hatchling>=1.31.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
